--- a/inst/package_report/package_function_reporter.Rmd
+++ b/inst/package_report/package_function_reporter.Rmd
@@ -5,10 +5,6 @@ params:
    reporter: params$reporter
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
 ## Description
 This report will give you a view of what packages you rely on
 
@@ -19,6 +15,6 @@ reporter$get_summary_view()
 
 ## Visualization
 
-```{r pressure, echo=FALSE}
+```{r echo=FALSE}
 reporter$plot_network()
 ```
