--- a/inst/package_report/package_summary_reporter.Rmd
+++ b/inst/package_report/package_summary_reporter.Rmd
@@ -11,7 +11,7 @@ params:
 This report will give you a high level description of a package
 
 
-```{r}
+```{r comment=NA}
 reporter$get_description()
 ```
 
