--- a/inst/package_report/package_summary_reporter.Rmd
+++ b/inst/package_report/package_summary_reporter.Rmd
@@ -11,8 +11,12 @@ params:
 This report will give you a high level description of a package
 
 
-```{r comment=NA}
-reporter$get_description()
+```{r results='asis'}
+DT::datatable(data = reporter$get_description()
+              , rownames = FALSE
+              , options = list(searching = FALSE
+                               , pageLength = 50)
+              )
 ```
 
 ### Num Objects
