filled summary views with tables

--- a/inst/package_report/package_function_reporter.Rmd
+++ b/inst/package_report/package_function_reporter.Rmd
@@ -13,7 +13,7 @@ This report provides an overview of the functions defined in your package.
 
 
 ```{r}
-#reporter$get_summary_view()
+reporter$get_summary_view()
 ```
 
 ### Visualization
