--- a/inst/package_report/package_dependency_reporter.Rmd
+++ b/inst/package_report/package_dependency_reporter.Rmd
@@ -13,7 +13,7 @@ This report will give you a view of what packages you rely on
 
 
 ```{r}
-#reporter$get_summary_view()
+reporter$get_summary_view()
 ```
 
 ### Visualization
