--- a/inst/package_report/package_summary_reporter.Rmd
+++ b/inst/package_report/package_summary_reporter.Rmd
@@ -12,15 +12,7 @@ params:
 This report will give you a high level description of a package
 
 ```{r results='asis'}
-DT::datatable(
-    data = reporter$get_description()
-    , rownames = FALSE
-    , options = list(
-        searching = FALSE
-        , pageLength = 50
-        , lengthChange = FALSE
-    )
-)
+reporter$get_summary_view()
 ```
 
 ### Num Objects
