Replaced package_ with pkg_ to make function style more consistent

--- a/inst/package_report/package_dependency_reporter.Rmd
+++ b/inst/package_report/package_dependency_reporter.Rmd
@@ -7,7 +7,7 @@ params:
 
 ## Dependency Network
 
-Here's an overview of of the packages **`r reporter$package_name`** relies upon.
+Here's an overview of of the packages **`r reporter$pkg_name`** relies upon.
 
 ### Visualization
 
