--- a/inst/package_report/package_report.Rmd
+++ b/inst/package_report/package_report.Rmd
@@ -8,7 +8,7 @@ output:
       after_body: footer.html
 params:
    reporters: params$reporters
-   package_name: params$package_name
+   pkg_name: params$pkg_name
 ---
 
 <!-- This is HTML code for the header at the top of the page -->
@@ -22,7 +22,7 @@ pkgnet:::silence_logger()
 ```
 
 ```{r title, results="asis"}
-cat(sprintf("# %s", package_name))
+cat(sprintf("# %s", pkg_name))
 ```
 
 ```{r}
