--- a/inst/package_report/package_summary_reporter.Rmd
+++ b/inst/package_report/package_summary_reporter.Rmd
@@ -7,7 +7,7 @@ params:
 
 ## Package Summary
 
-Here' some general information about **`r reporter$package_name`**. 
+Here' some general information about **`r reporter$pkg_name`**. 
 
 ### Table
 
