Updated docs. Moved plot_network inside the package

--- a/inst/package_report/package_function_reporter.Rmd
+++ b/inst/package_report/package_function_reporter.Rmd
@@ -12,7 +12,7 @@ Here's an overview of the functions defined in **`r reporter$package_name`**.
 ### Visualization
 
 ```{r echo=FALSE}
-reporter$plot_network()
+reporter$graphViz
 ```
 
 ### Table
