--- a/inst/package_report/package_dependency_reporter.Rmd
+++ b/inst/package_report/package_dependency_reporter.Rmd
@@ -12,7 +12,7 @@ Here's an overview of of the packages **`r reporter$package_name`** relies upon.
 ### Visualization
 
 ```{r pressure, echo=FALSE}
-reporter$plot_network()
+reporter$graphViz
 ```
 
 ### Table
