Updated a few more camelCase to snake_case things

--- a/inst/package_report/package_dependency_reporter.Rmd
+++ b/inst/package_report/package_dependency_reporter.Rmd
@@ -12,7 +12,7 @@ Here's an overview of of the packages **`r reporter$pkg_name`** relies upon.
 ### Visualization
 
 ```{r pressure, echo=FALSE}
-reporter$graphViz
+reporter$graph_viz
 ```
 
 ### Table
