--- a/vignettes/pkgnet-intro.Rmd
+++ b/vignettes/pkgnet-intro.Rmd
@@ -11,7 +11,7 @@ vignette: >
 
 ```{r setupVignette, include = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE,
+  collapse = FALSE,
   comment = "#>",
   fig.align = 'center'
 )
@@ -56,25 +56,115 @@ To analyze `baseballstats`, run the following two lines of code:
 
 ```{r pkgnetRunFirst, message=FALSE, warning=FALSE, results='hide'}
 library(pkgnet)
-reportObj <- CreatePackageReport(pkg_name = "baseballstats")
+report1 <- CreatePackageReport(pkg_name = "baseballstats")
 ```
 
-That's it! You have generated a lot of valuable information with that one call for a CRAN installed package.  
+That's it! You have generated a lot of valuable information with that one call for an installed package.  
 
-However, if the full source repository for the package is available on your system, you can supplement this report with other information such as code coverage information from [covr](https://cran.r-project.org/web/packages/covr/index.html).  To do so, specify the path to the repository in `CreatePackageReport`.  
+However, if the full source repository for the package is available on your system, you can supplement this report with other information such as code coverage from [covr](https://cran.r-project.org/web/packages/covr/index.html).  To do so, specify the path to the repository in `CreatePackageReport`.  
 
 
 ```{r pkgnetRunFAKE, eval=FALSE}
 library(pkgnet)
-reportObjWithCovr <- CreatePackageReport(pkg_name = "baseballstats"
-                                 , pkg_path = <path to the repo>)
+report2 <- CreatePackageReport(
+  pkg_name = "baseballstats"
+  , pkg_path = <path to the repo>
+)
 ```
 
 ```{r pkgnetRunSecond, message=FALSE, warning=FALSE, results='hide', echo=FALSE}
 library(pkgnet)
-reportObjWithCovr <- CreatePackageReport(pkg_name = "baseballstats"
-                                 , pkg_path = system.file('baseballstats',package="pkgnet")
-                                 )
+report2 <- CreatePackageReport(
+  pkg_name = "baseballstats"
+  , pkg_path = system.file('baseballstats',package="pkgnet")
+)
+```
+
+***
+# Dependencies As a Graph
+Most R packages depend upon other R packages that then depend upon other R packages and so on.  Most R packages also consist of a collection of functions with similar cascading dependencies. To capture and quantify the complexity of these dependency networks, `pkgnet` represents both package depedencies and function dependencies as directed graphs. 
+
+## One Dependency
+Functions or Dependencies are represented as nodes, and their dependent relationships are represented as edges (a.k.a. arcs or arrows).  The direction of the edge points towards the node that is dependant on the other node.  
+
+In the example below, **C** is dependant upon **A**. 
+
+```{r whatIsDep, echo=FALSE, message=FALSE, results='markup', fig.height=1}
+nodes <- data.frame(
+  id = 1:2
+  , label = c("A","C")
+  , level = 1:1
+)
+edges <- data.frame(
+  from = 1
+  , to = 2
+)
+
+g <- visNetwork::visNetwork(nodes = nodes
+                       , edges = edges
+                       , width = "100%"
+                       )
+g <- visNetwork::visNodes(graph = g
+                          , shape = "circle"
+                          , font = list(size = 50
+                                        , bold = TRUE
+                                        , align = 'center'
+                                        )
+                       )
+g <- visNetwork::visEdges(graph = g
+                          , arrows = "to"
+                       )
+g <- visNetwork::visHierarchicalLayout(graph = g
+                      , direction = "DU"
+                      )
+g <- visNetwork::visInteraction(graph = g
+                                , dragNodes = TRUE
+                                , dragView = TRUE
+                                , zoomView = FALSE)
+g
+```
+
+
+
+## A Network of Dependencies
+sdasf dsaf sd fasf asd fsda 
+
+```{r whatIsDepGraph, echo=FALSE, message=FALSE, results='markup'}
+nodes <- data.frame(
+  id = 1:4
+  , label = LETTERS[1:4]
+  , x = c(1,3,2,4)
+  , y = c(1,1,2,3)
+  , level = c(1,1,2,3)
+  )
+
+edges <- data.frame(
+  from = c(1,2,3,2)
+  , to = c(3,3,4,4)
+  )
+
+g <- visNetwork::visNetwork(nodes = nodes
+                       , edges = edges
+                       , width = "100%"
+                       )
+g <- visNetwork::visNodes(graph = g
+                          , shape = "circle"
+                          , font = list(size = 25
+                                        , bold = TRUE
+                                        , align = 'center'
+                                        )
+                       )
+g <- visNetwork::visEdges(graph = g
+                          , arrows = "to"
+                       )
+g <- visNetwork::visHierarchicalLayout(graph = g
+                      , direction = "DU"
+                      )
+g <- visNetwork::visInteraction(graph = g
+                                , dragNodes = TRUE
+                                , dragView = TRUE
+                                , zoomView = FALSE)
+g
 ```
 
 
@@ -102,7 +192,7 @@ As a sample, here's how the **Function Network Visualization** looks for `pkgnet
 <div class="column-left">
 #### Default
 ```{r demoVis1, echo=FALSE}
-reportObj$PackageFunctionReporter$graph_viz
+report1$PackageFunctionReporter$graph_viz
 ```
 Functional dependencies are visible.  For example, we can see that both `batting_avg` and `slugging_avg` functions depend upon the `at_bats` function.  
 
@@ -112,7 +202,7 @@ We also see that nothing depends on the `on_base_pct` function.  This might be v
 <div class="column-right">
 #### With Coverage Information 
 ```{r demoVis2, echo=FALSE}
-reportObjWithCovr$PackageFunctionReporter$graph_viz
+report2$PackageFunctionReporter$graph_viz
 ```
 Same as the default visualization except we can see coverage information as well (Red = 0%, Green = 100%). 
 
@@ -141,40 +231,55 @@ Here are a few notable items available within the list object.
 Both the `PackageDependencyReporter` and the `PackageFunctionReporter` contain metrics about their package dependencies or functions (a.k.a network nodes) in a `nodes` table.  
 
 ```{r nodes}
-dim(reportObjWithCovr$PackageFunctionReporter$nodes)
-names(reportObjWithCovr$PackageFunctionReporter$nodes)
+dim(report2$PackageFunctionReporter$nodes)
+names(report2$PackageFunctionReporter$nodes)
 ```
 
 ### Network Measures 
 Both the `PackageDependencyReporter` and the `PackageFunctionReporter` contain measure based on their network structure in a `network_measures` list. 
 
 ```{r networkMeasures}
-reportObjWithCovr$PackageFunctionReporter$network_measures
+report2$PackageFunctionReporter$network_measures
 ```
 
 ### Network Object
 Both the `PackageDependencyReporter` and the `PackageFunctionReporter` are available as [igraph](http://igraph.org/r/) objects named `pkg_graph`
 
 ```{r networkObj}
-reportObjWithCovr$PackageFunctionReporter$pkg_graph
+report2$PackageFunctionReporter$pkg_graph
 ```
 
 ***
 # A Deeper Look
-With the reports and objects produced by `pkgnet` by default, there is plenty to inform us on the inner workings of an R package.  However, we may want to know MORE! Since the [igraph](http://igraph.org/r/) objects are available, we can leverage those for further analysis.  Here are some examples.  
+With the reports and objects produced by `pkgnet` by default, there is plenty to inform us on the inner workings of an R package.  However, we may want to know MORE! Since the [igraph](http://igraph.org/r/) objects are available, we can leverage those graphs for further analysis.  
+
+In this section, let's examine a larger R package, such as [lubridate](http://lubridate.tidyverse.org/).
+
+If you would like to follow along with the examples in this section^[Examples from version 1.7.3 of Lubridate], run these commands in your terminal to download and install `lubridate`.  
+```{r bashText, engine='bash', eval=FALSE}
+# Create a temporary workspace
+mkdir -p ~/pkgnet_example && cd ~/pkgnet_example
+
+# Grab the lubridate source code
+git clone https://github.com/tidyverse/lubridate
+
+# Install it
+cd lubridate
+Rscript -e "devtools::install()"
+```
 
 ## Coverage of Most Referenced Functions
-Let's visualize the relationship between centrality and coverage in a large package such as `lubridate`.
+Let's visualize the relationship between function centrality and code coverage.
 
 <!--  Faked Since lubridate not guaranteed to be installed at time of report creation -->
 ```{r fakeDetail1, eval=FALSE}
 # Run pkgnet
 library(pkgnet)
-reportObjWithCovr <- CreatePackageReport(pkg_name = "lubridate"
-                                         , pkg_path = "~/repos/lubridate")
+report2 <- CreatePackageReport(pkg_name = "lubridate"
+                                         , pkg_path = "~/pkgnet_example/lubridate")
 
 # Extract Nodes Table
-funcNodes <- reportObjWithCovr$PackageFunctionReporter$nodes
+funcNodes <- report2$PackageFunctionReporter$nodes
 
 # List Coverage For Most Referenced Functions
 mostRef <- funcNodes[order(numDescendants, decreasing = TRUE)][1:10]
@@ -202,7 +307,7 @@ Looking at that same large package, let's say we wanted to explore options for c
 
 ```{r fakeDetail2, eval=FALSE}
 # Get igraph object
-funcGraph <- reportObjWithCovr$PackageFunctionReporter$pkg_graph
+funcGraph <- report2$PackageFunctionReporter$pkg_graph
 funcNames <- igraph::vertex_attr(funcGraph, name = "name")
 
 # Jaccard Similarity
