Give vignette index entry a descriptive title

--- a/vignettes/pkgnet-intro.Rmd
+++ b/vignettes/pkgnet-intro.Rmd
@@ -5,7 +5,7 @@ output:
     toc: true
     fig_caption: yes
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Exploring The Structure and Dependencies of An R Package}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
