rmarkdown minimum version and rmarkdown header changes

--- a/inst/package_report/package_report.Rmd
+++ b/inst/package_report/package_report.Rmd
@@ -1,5 +1,5 @@
 ---
-name: "pkgnet"
+title: "pkgnet"
 output:
   html_document:
     self_contained: TRUE
@@ -33,6 +33,7 @@ reportTabs <- lapply(params$reporters, function(reporter) {
     , envir = report_env
   )
 })
+
 ```
 
 ```{r results="asis"}
