keep vignette source rmd files.  Full render for CRAN.

--- a/vignettes/pkgnet-intro.Rmd
+++ b/vignettes/pkgnet-intro.Rmd
@@ -10,7 +10,11 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-<!--  THIS VIGNETTE IS FULLY RENDERED TO SATISFY CRAN COMPLIANCE ISSUES.   -->
+<!--    THIS VIGNETTE IS FULLY RENDERED TO SATISFY A CRAN COMPLIANCE ISSUE INVOLVING 
+        INSTALLING THE TEST PACKAGE, BASEBALLSTATS, TO THE USER'S LIBRARY DURING THE
+        VIGNETTE RENDERING PROCESS. THE SOURCE Rmd VIGNETTE FILE IS LOCATED IN THE 
+        "vignettes_source" DIRECTORY.
+-->
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 
