--- a/vignettes/pkgnet-intro.Rmd
+++ b/vignettes/pkgnet-intro.Rmd
@@ -353,11 +353,10 @@ Now, we have identified seven different groups of functions within [lubridate](h
 
 
 ```{r removeDemoPackage, include=FALSE}
-utils::remove.packages(pkgs = c('baseballstats'
-                                , 'sartre'
-                                , 'pkgnet')
-                       , lib = testLibPath
-                       )
+utils::remove.packages(
+    pkgs = c('baseballstats', 'sartre', 'pkgnet')
+    , lib = testLibPath
+)
 
 # Just in case 
 .libPaths(new = c(origLibPaths))
